CB-30060 Refactor parallelism in ResourceBuilder
Removed batch configuration classes, properties, and related methods across the codebase. Simplified resource builder logic to use thread pools.